@@ -1,10 +1,9 @@
-pytest_xmlresult plugin (EXTERNAL)
+pytest_coverage plugin (EXTERNAL)
 ==========================================
 
-This plugin allows to write results in an XML format
-compatible to CruiseControl_, see here for download:
+This plugin allows to use Ned's coverage_ package, see
 
     http://github.com/rozza/py.test-plugins
 
-.. _CruiseControl: http://cruisecontrol.sourceforge.net/
 
+.. _coverage: http://pypi.python.org/pypi/coverage
